--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.3.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "tailwindcss": "^2.2.4",
+    "url-loader": "^4.1.1",
+    "webp-loader": "^0.6.0"
+  },
+  "devDependencies": {
+    "gray-matter": "^4.0.3"
   }
 }
