--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "pm2": "next build && pm2 start npm --name 'neo-blog' -- run start --watch --instances 4"
+    "pm2": "next build && pm2 start npm --name 'neo-blog' -- run start --watch"
   },
   "dependencies": {
     "autoprefixer": "^10.3.1",
